Fixed footer that was overlapping with the body in some cases, added subcategory information in book cards, added wish list section and rearranged Comments and Add your comment sections in books details page and cards

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,8 +4,9 @@ html {
 }
 
 body {
-    font-family: 'Red Hat Mono';
+    font-family: 'Red Hat Mono', monospace;
     padding-top: 164px;
+    padding-bottom: 164px;
 }
 
 /* ------------------ Navigation Bar, Page and Footer */
@@ -32,10 +33,36 @@ body {
     background-color: #866209;
 }
 
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+}
+
 .copyright {
     font-size: x-small;
 }
 
+/* ------------------ Body */
+
+.ft-sm {
+    font-size: 14px !important;
+    font-family: 'Lato', sans-serif !important;
+}
+
+.ft-md {
+    font-size: 16px !important;
+}
+
+/* ------------------ Cards */
+
+.card-img-top {
+    width: 100%;
+    height: 30vh;
+    object-fit: cover;
+}
 
 /* ------------------ Allauth Forms */
 
